--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -69,8 +69,8 @@
 </style>
 
 <footer class="lwj-demo-footer">
-  <a href="https://www.learnwithjason.dev"
-    >Created on <em>Learn With Jason</em></a
+  <a href="https://www.MEANDYOU.dev"
+    >Created on <em>Get Your NFT</em></a
   >
   {% if meta.episode %}<a href="{{ meta.episode }}">Watch It Get Built</a>{%
   endif %}{% if meta.tutorial %}<a href="{{ meta.tutorial }}">Tutorial</a>{%
@@ -79,7 +79,7 @@
   >
   <a
     href="http://app.netlify.com/start/deploy?repository=https://github.com/{{ meta.repo }}?utm_source=learnwithjason&utm_medium=lwj-demo-footer-jl&utm_campaign=devex"
-    >Deploy Your Own Copy</a
+    >BUY NOW</a
   >{% endif %}
 
   <div class="bottom-bar"></div>
