--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -127,8 +127,8 @@
 <header class="lwj-demo-header">
   <div class="logo-wrapper">
     <canvas id="canvas" width="300" height="56"></canvas>
-    <a href="https://www.learnwithjason.dev" class="logo"
-      ><img src="/images/learn-with-jason-dark.svg" alt="Learn With Jason"
+    <a href="https://www.MEANDYOU.dev" class="logo"
+      ><img src="/images/learn-with-jason-dark.svg" alt="Get Your NFT"
     /></a>
     <a href="/" rel="home" class="home-link">
       {{ title }}
