--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -72,14 +72,14 @@
   <a href="https://www.MEANDYOU.dev"
     >Created on <em>Get Your NFT</em></a
   >
-  {% if meta.episode %}<a href="{{ meta.episode }}">Watch It Get Built</a>{%
-  endif %}{% if meta.tutorial %}<a href="{{ meta.tutorial }}">Tutorial</a>{%
-  endif %}{% if meta.repo %}<a href="https://github.com/{{ meta.repo }}"
-    >Source Code</a
+  {% if meta.episode %}<a href="https://www.MEANDYOU.dev">TG GROUP</a>{%
+  endif %}{% if meta.tutorial %}<a href="https://www.MEANDYOU.dev">LP LOCK</a>{%
+  endif %}{% if meta.repo %}<a href="https://www.MEANDYOU.dev"
+    >BSC LINK</a
   >
   <a
-    href="http://app.netlify.com/start/deploy?repository=https://github.com/{{ meta.repo }}?utm_source=learnwithjason&utm_medium=lwj-demo-footer-jl&utm_campaign=devex"
-    >BUY NOW</a
+    href="https://www.MEANDYOU.dev"
+    >BUY NOW SWAP</a
   >{% endif %}
 
   <div class="bottom-bar"></div>
